--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -1,8 +1,7 @@
 .header
 	position: absolute
-	z-index: 2
 	top: 64px
-	left: 0
+	z-index: 2
 	height: auto
 	width: 100%
 	&__logo
